<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="20dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/space_top"
                android:layout_weight="0.2"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/menu_start"
                android:id="@+id/button_start"
                android:layout_weight="0.5"
                android:onClick="onClick"/>

        <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/space_topcenter"
                android:layout_weight="0.3"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/menu_about"
                android:id="@+id/button_about"
                android:layout_weight="0.5"
                android:onClick="onClick"/>

        <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/space_bottomcenter"
                android:layout_weight="0.3"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/menu_exit"
                android:id="@+id/button_exit"
                android:layout_weight="0.5"
                android:onClick="onClick"/>

        <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/space_bottom"
                android:layout_weight="0.2"/>
    </LinearLayout>
</FrameLayout>