<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newgame_thinkof_label"
            android:id="@+id/newgame_thinkof_label"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/space_left"
                android:layout_weight="0.25"/>

        <NumberPicker
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/newgame_numberPicker0"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/space01"
                android:layout_weight="0.25"/>

        <NumberPicker
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/newgame_numberPicker1"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/space12"
                android:layout_weight="0.25"/>

        <NumberPicker
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/newgame_numberPicker2"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/space23"
                android:layout_weight="0.25"/>

        <NumberPicker
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/newgame_numberPicker3"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/space_right"
                android:layout_weight="0.25"/>
    </LinearLayout>

    <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:id="@+id/space"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newgame_thinkof_button"
            android:id="@+id/newgame_thinkof_button"
            android:onClick="onClick"/>

    <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:id="@+id/space1"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newgame_thinkof_or"
            android:id="@+id/newgame_thinkof_random_label"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newgame_thinkof_random_button"
            android:id="@+id/newgame_thinkof_random_button"
            android:onClick="onClick"/>
</LinearLayout>